--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,52 @@
-/* This goes in all the CSS */
 * {
-    margin: 0; 
-    padding: 0;
     box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    font-family: sans-serif;
 }
 
-/* Header */
-.jumbotron {
-    background: #2A5CC2;
-    color: #f0b445
+body {
 }
 
-.hide {
-    display: none;
+.navbar>.container, .navbar>.container-fluid  {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.navbar {
+    background-image: linear-gradient(to right, #4682B4, #191970);
+    color: ghostwhite;
+    font-weight: bolder;
+    min-width: 100vw;
+    min-height: 8vh;
+}
+
+aside {
+    padding: 6px;
+    width: 20vw;
+    height: 90vh;
+}
+
+.form-control {
+    width: 20vw;
+}
+
+.pervious-cities {
+    border-top: 3px solid dimgray;
+    padding: 4px;
+}
+
+main {
+    width: 75vw;
+    justify-content: right;
+    padding-left: 24px;
+    padding-top: 9px;
+    
+}
+
+.col {
+    max-width: 13vw;
+    display: inline-block;
 }
